syntax = "proto3";
option java_multiple_files = true;
package de.rhojin.grpc;

service NoteService {
  rpc GetTopics(Empty) returns (Topics) {}
  rpc GetNotesByTopic(Topic) returns (Notes) {}
  rpc GetNotes(Empty) returns (Notes) {}
  rpc GetNote(NoteId) returns (Note) {}
  rpc CreateNote(Note) returns (Empty) {}
  rpc UpdateNote(Note) returns (Empty) {}
  rpc DeleteNote(NoteId) returns (Note) {}
}

message Empty {}

message Topic {
  int32 id = 1;
  string text = 2;
}

message Topics {
  repeated Topic topic = 1;
}

message NoteId {
  int32 id = 1;
}

message Note {
  int32 id = 1;
  int32 index = 2;
  string text = 3;
  Topic topic = 4;
}

message Notes {
  repeated Note note = 1;
}